Playlist table is fixed and right aligned, add button styled

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,4 +9,11 @@ nav {
 body,
 html {
   height: 100%;
+  margin-left: 10px;
+  background: url("./images/malte-wingen-PDX_a_82obo-unsplash.jpg") no-repeat
+    center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
